# hi_tech

./: .env  .gitignore  README.md  dagster_cloud.yaml  pyproject.toml  setup.cfg  setup.py  workspace.yaml
.github/workflows/: branch_deployments.yml  deploy.yml
bookings_etl/: __init__.py
bookings_etl/assets/supabase/: __init__.py  supabase_public_booking_values.py  supabase_public_bookings.py  supabase_public_rentals.py  supabase_public_reports_view.py
bookings_etl/assets/tokeet_datafeeds/: __init__.py  tokeet_datafeeds_bookings.py  tokeet_datafeeds_rentals.py
bookings_etl/jobs/: initialize_assets.py  materialize_assets.py
bookings_etl/resources/: supabase.py
bookings_etl/temp/: bookings.csv  import_booking_values.ipynb  import_bookings.ipynb
bookings_etl/utils/: __init__.py
tmpr009jj7l/history/: runs.db
tmpr009jj7l/history/runs/: 24bb467a-b526-404c-99b5-a6abbff43acb.db  index.db
tmpr009jj7l/schedules/: schedules.db
tmpr009jj7l/storage/: supabase_tenant_settings
tmpr009jj7l/storage/24bb467a-b526-404c-99b5-a6abbff43acb/compute_logs/: jaqhiqis.err
